Merged the changes of spf-common-utilities from trunk (revision 5483).
git-svn-id: file:///opt/mount/casfw/spf-git-migration/spf.svn/source/branches/spf-3.0@5489 fbe1f26e-0b55-418f-9102-102d79b04d0f